// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Play Time Display Component Presenter Displays currentTime When Prop is Passed 1`] = `
<span
  className="AudioPlayer__currentTime___2CUk7"
>
  1:00
</span>
`;

exports[`Play Time Display Component Presenter Works Without currentTime Prop and Displays 0:00 1`] = `
<span
  className="AudioPlayer__currentTime___2CUk7"
>
  0:00
</span>
`;
